--- a/peluqueria.html
+++ b/peluqueria.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 
-
 <head>
 
     <meta charset="utf-8">
@@ -9,9 +8,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
-    <title>Historias de una Boda en Polonia</title>
+    <title>Peluquería / Fryzjer</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -19,9 +17,7 @@
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
-    <!-- toastr CSS-->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/2.0.1/css/toastr.css" rel="stylesheet"/>
-    <!-- Custom CSS -->
+   <!-- Custom CSS -->
     <link href="css/grayscale.css" rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -33,35 +29,30 @@
 
 </head>
 
-<body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
+<!-- style="background-color:#cccccc;-->
+<body style="background-color:#fff;" id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
 
     <!-- Navigation -->
-    <nav class="navbar navbar-custom navbar-fixed-top " role="navigation">
+    <nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
                     <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top" >
-                      <span class="light">Basia</span><span style="color:red">&hearts;</span>Javy
+                <a class="navbar-brand page-scroll" href="index.html" >
+                      <span class="light"><i class="fa fa-home"></i>Basia</span><span style="color:red">&hearts;</span>Javy
                 </a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
-            <div  class="collapse navbar-collapse navbar-right navbar-main-collapse ">
+            <div  class="collapse navbar-collapse navbar-right navbar-main-collapse">
 
                 <ul class="nav navbar-nav">
                     <!-- Hidden li included to remove active class from about link when scrolled up past about section -->
                     <li class="hidden">
                         <a href="#page-top"></a>
                     </li>
-                    <li>
-                        <a  class="page-scroll force_collapse" href="#about">Introducción<br>Wstęp</a>
-                    </li>
-
-                    <li>
-                        <a class="page-scroll force_collapse" href="#contact">Contacto<br>Kontakt</a>
-                    </li>
+                    
                     <li>
                         <a id="enlaces" data-toggle="dropdown" role="button"><br>Enlaces
                         <span class="caret"></span></a>
@@ -88,6 +79,7 @@
                             <!-- <li><a href="#">Separated link</a></li>-->
                         </ul>
                     </li>
+
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -95,22 +87,13 @@
         <!-- /.container -->
     </nav>
 
-    <!-- Intro Header -->
-    <header class="intro">
-        <div class="intro-body">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-8 col-md-offset-2">
-                        <h1> Despegamos en...</h1><h1>Startujemy za ...</h1>
-                            <div id="days" id="hours" class="timer_box"></div>
-                            <div id="hours" class="timer_box"></div>
-                            <div id="minutes" class="timer_box"></div>
-                            <div id="seconds" class="timer_box"></div>
-                    </div>
-                    <div class="col-md-8 col-md-offset-2">
-                        <a href="#about" class="btn btn-circle page-scroll">
-                            <i class="fa fa-angle-double-down animated "></i>
-                        </a>
+    <header class="intro-header article_image" style="background-image: url('img/boda_2.jpg')">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+                    <div class="post-heading white_with_black_stroke">
+                        <h2>¿Necistas peluquería?</h2>
+                        <h2>tu po polsku, nie wiem</h2>
                     </div>
                 </div>
             </div>
@@ -118,42 +101,16 @@
     </header>
 
 
-    <!-- About Section -->
-	<div id="about" class="about-section">
-    <section class="container content-section text-center">
+
+    <article  style="background-color:#fff;" class="article-body">
+        <div class="container">
             <div class="row">
-                <div class="col-md-5">
-                    <h2 align=left>¡QUERIDOS INVITADOS, OS PRESENTAMOS LA PÁGINA DE NUESTRA BODA!</h2>
-                    <p class="lead" align=justify>&emsp;Esta página ha sido creada para toda la famila y amigos con quien queremos compartir la felicidad de un día tan importante como este, nuestro enlace,
-                    el cual tendrá lugar el 20 de agosto de <b>2016 en Ełk (pronunciado euk).</b>
-                    <br>&emsp;En ésta página encontraréis información de interés que esperamos sea de utilidad para vosotros. En el barra de navegación superior podéis acceder a los diferentes artículos que hemos incluido. Si tenéis alguna pregunta, duda y/o sugerencia, pinchar en <b><i>Contacto</i></b> para mandarnos un email. Os contestaremos a la mayor brevedad posible.
-                    </p>
-                </div>
-
-                <div class="col-md-1">
-                    <p>&emsp;</p>
-                </div>
-
-                <div class="col-md-5">
-                    <h2 align=left>DRODZY GOŚCIE, PRZEDSTAWIAMY WAM NASZĄ STRONĘ ŚLUBNĄ!</h2>
-                    <p class="lead" align=justify>&emsp;Kochani, strona ta została stworzona z myślą o Was, o naszej rodzinie i przyjaciołach, o naszych bliskich, bo to z Wami chcemy dzielić się radością tego ważnego dla nas dnia, który będzie miał miejsce <b>20 sierpnia 2016 roku w Ełku. </b>
-                    <br>&emsp;W górnym pasku nawigacyjnym strony znajdziecie dostęp do wszystkich przydatnych według nas informacji. Jeśli macie pytania, wątpliwości i/lub sugestie, możecie do nas napisać poprzez zakładkę <b><i>Kontakt</i></b>, za pomocą której można wysłać do nas zapytanie. Obiecujemy odpowiedzieć szybko na Wasze maile.
-                    </p>
-                </div>
-            </div>
-    </section>
-	</div>
-
-    <!-- Contact Section -->
-
-    <div id="contact" class="contact-section">
-    <section class="container content-section text-center">
-            <div class="row">
-                <div class="col-md-5">
-                    <h2 align=left>Mándanos un email</h2>
-                    <p align=justify>&emsp;Estamos aquí para ayudar. Si tenéis alguna pregunta o duda pincha aquí para enviarnos un correo electrónico.</p>
-
-
+                <div class="text-justify" style="color:#000;"class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">  
+                     
+                <div class="row">
+                    <div class="col-md-5">
+                       <p>&emsp;Hay posibilidad de coger cita para peinarse el día de nuestra boda. Si deseas ir a la peluquería, avísanos por email o bien llámanos personalmente al número que aparece en la invitación</p>
+                       <h2 align=left>Mándanos un email</h2> 
                     <!-- forma de contacto                                mi boton para español-->
 
                     <!-- He añadido required para que sea necesario meter los datos. Habría que traducirlo con algun script-->
@@ -206,16 +163,10 @@
                         </div>
                     </div>
 
-                    <!-- forma de contacto -->
-                </div>
-
-                <div class="col-md-1">
-                    <p>&emsp;</p>
-                </div>
-
-                <div class="col-md-5">
-                    <h2 align=left>Wyślij do nas zapytanie</h2>
-                    <p align=justify>&emsp;Jesteśmy do Waszej dyspozycji. Jeśli macie pytania lub wątpliwości, kliknijcie poniżej, aby wysłać e-mail.</p>
+                    </div>
+                    <div class="col-md-offset-1 col-md-5">
+                       <p>&emsp;Istnieje możliwość zapisania się do fryzjera. Dziewczyny jeśli któraś z Was chciałaby pójść do fryzjera napiszcie do nas bądź skontaktujcie się z nami osobiście</p>
+                       <h2 align=left>Wyślij do nas zapytanie</h2>                   
                      <!-- forma de contacto                                polaco-->
                     <div class="row"><h1 class="text-center"><a href="#myModal2" role="button" class="btn btn-primary btn-lg" data-toggle="modal">Kontakt</a></h1></div>
 
@@ -261,29 +212,48 @@
                             </div>
                         </div>
                     </div>
+                    </div>
+                </div>    
 
-                    <!-- forma de contacto -->
+
+
                 </div>
             </div>
 
-    </section>
+
+        <div class="row">
+            <div class="col-md-offset-3">
+                <h2  class="gray_with_black_stroke"><br>Ejemplos / po polsku<br></h2>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-5">
+                <div align="center">
+                    <img  class="img-responsive img-rounded" src="img/peinado_1.jpg">                        
+                </div>
+            </div>
+            <div class="col-md-offset-1  col-md-5">
+                <div align="center">
+                    <img  class="img-responsive img-rounded" src="img/peinado_2.jpg">                        
+                </div>
+            </div>
+        </div>
     </div>
 
-    <!-- Map Section -->
-     <div class="col-md-12" align="center">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d570418.0600689763!2d22.161575044742293!3d53.723767456843525!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46e1b97f3761e307%3A0x5341066a14824162!2sElk%2C+Poland!5e0!3m2!1sen!2ses!4v1453066116332"  width=100% height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
-    </div>
+
+
+    </article>
 
     <!-- Footer -->
     <footer>
         <div class="container text-center">
-            <a id="footer" class="page-scroll" href="#page-top" >
+            <a id="footer_articles" class="page-scroll" href="#page-top" >
                 <p >Copyright &copy; Basia<span style="color:red">&hearts;</span>Javy 2016 <i class="fa fa-angle-double-up"></i></p>
             </a>
         </div>
     </footer>
 
-    <!-- Loading scripts-->
+
     <!-- jQuery -->
     <script src="js/jquery.js"></script>
 
@@ -293,11 +263,11 @@
     <!-- Plugin JavaScript -->
     <script src="js/jquery.easing.min.js"></script>
 
-    <!-- Custom Theme JavaScript -->
+    <!-- Google Maps API Key - Use your own API key to enable the map feature. More information on the Google Maps API can be found at https://developers.google.com/maps/ -->
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCRngKslUGJTlibkQ3FkfTxj3Xss1UlZDA&sensor=false"></script>
+
+    <!-- Este script tiene algún tipo de bug con los dropdown menus-->
     <script src="js/grayscale.js"></script>
-    <script src="js/custom.js"></script>
-
-
 
 </body>
 
