--- a/thanks_es.html
+++ b/thanks_es.html
@@ -23,13 +23,6 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/2.0.1/css/toastr.css" rel="stylesheet"/>
 
 
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
-
 </head>
 
 <body>
@@ -37,11 +30,8 @@
     <nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
         <div class="container">
             <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
-                    <i class="fa fa-bars"></i>
-                </button>
                 <a class="navbar-brand page-scroll" href="index.html">
-                      <span class="light">Basia</span><span style="color:red">&hearts;</span>Javy
+                      <span class="light"><i class="fa fa-home"></i>Basia</span><span style="color:red">&hearts;</span>Javy
                 </a>
             </div>
         </div>
@@ -50,12 +40,12 @@
         <div class="intro-body">
                 <div class="container">
 
-                        <div class="bottom-aligned-text ">
-                            <h2>¡Gracias por tu e-mail!</h2>
+                        <div class="bottom-aligned-text white_with_gray_stroke">
+                            <h2 >¡Gracias por tu e-mail!</h2>
                             <h2> ¡Responderemos a la mayor brevedad posible!<br><br></h2>
 
                         </div>
-                        <div class="col-md-8 col-md-offset-2">
+                        <div class="col-md-8 col-md-offset-2 ">
                             <a href="index.html" class="btn btn-circle">
                                 <i class="fa fa-angle-double-left animated"></i>
                             </a>
